2008-08-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Make enabling hg-only projects sufficient for
	downloading from hg.
	
2008-08-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Add BSD and Caciocavallo URLs.
	* acinclude.m4:
	(WITH_PROJECT): Added.
	(ENABLE_OTHER_PROJECTS): Converted to WITH_PROJECT.
	* configure.ac: Support building with BSD
	and Caciocavallo projects via --with-project.

2008-08-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-ecj.patch: Fix OGLContext.h to
	use correct headers when generated by gjavah.

2008-08-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-ecj.patch: Generate header file
	for OGLContext inner class and specify explicit
	filename for inner class header files.

2008-08-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-corba.patch,
	* patches/icedtea-generated.patch:
	Removed.
	* HACKING: Updated.
	* Makefile.am: Move to b33 and remove
	unneeded patches.
	* patches/icedtea-copy-plugs.patch,
	* patches/icedtea-debuginfo.patch: Updated.
	* patches/icedtea-ecj.patch: Updated and added
	fix for new Java version of NIO generator.
	* patches/icedtea-javafiles.patch,
	* patches/icedtea-jscheme.patch: Updated.
	* patches/icedtea-override.patch: Added new cases.
	* patches/icedtea-zero-build.patch: Updated.

2008-08-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* HACKING: Updated.
	* Makefile.am: Move to b32 and add new patch for
	MBeanIntrospector.
	* patches/icedtea-debuginfo.patch,
	* patches/icedtea-libraries.patch: Updated.
	* patches/icedtea-mbeanintrospector.patch:
	New patch (getAnnotation cast for ecj builds).
	* patches/icedtea-sparc-trapsfix.patch,
	* patches/icedtea-version.patch: Updated.

2008-08-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Don't install icedtea-javafiles.patch on CVMI builds.
	Use ICEDTEA_BOOT_DIR and not ECJ_BUILD_OUTPUT_DIR for