@@ -1,3 +1,7 @@
+2008-09-01  Mark Wielaard  <mark@klomp.org>
+
+	* autogen.sh: New file from icedtea6.
+
 2008-08-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
